# MotionPNGTuber

./: .gitignore  README.ja.md  README.md  audio_linux.py  auto_erase_mouth.py  auto_mouth_track_v2.py  calibrate_mouth_track.py  convert_npz_to_json.py  erase_mouth_offline.py  face_track_anime_detector.py  image_io.py  loop_lipsync_runtime_patched_emotion_auto.py  mouth_auto_classifier.py  mouth_color_adjust.py  mouth_feature_analyzer.py  mouth_sprite_extractor.py  mouth_sprite_extractor_gui.py  mouth_track_gui.py  pyproject.toml  workflow_validation.py
assets/asmr_tomari/: mouth_track.json  mouth_track.npz  mouth_track_calibrated.npz
motionpngtuber/: auto_crop_estimator.py  lipsync_core.py  mouth_auto_classifier.py  mouth_sprite_extractor.py  platform_open.py  python_exec.py  realtime_emotion_audio.py  workflow_validation.py
mouth_track_gui/: __init__.py  __main__.py  _paths.py  actions.py  app.py  live_ipc.py  preview.py  runner.py  services.py  state.py  ui.py
tests/: test_audio_chunk_buffer.py  test_audio_linux.py  test_auto_erase_mouth.py  test_auto_mouth_track_v2.py  test_calibrate_mouth_track_io.py  test_convert_npz_to_json.py  test_e2e_smoke.py  test_face_track_anime_detector.py  test_image_io_color_order.py  test_lipsync_core_mouth_sprites.py  test_lipsync_runtime_color_updates.py  test_lipsync_runtime_hysteresis.py  test_mouth_color_adjust.py  test_mouth_sprite_color_order.py  test_mouth_sprite_extractor_io.py  test_mouth_sprite_extractor_script_resolution.py  test_mouth_track_actions.py  test_mouth_track_app.py  test_mouth_track_live_ipc.py  test_mouth_track_preview.py  test_mouth_track_runner.py  test_mouth_track_services.py  test_mouth_track_session.py  test_platform_open.py  test_python_exec.py  test_track_selection.py  test_unicode_debug_outputs.py  test_workflow_validation.py
